--- a/index.html
+++ b/index.html
@@ -462,7 +462,30 @@
             </li>
           </ul>
         </div>
+        <div>
+          <p class="footer-text-icon">Subscribe</p>
+          <form class="form">
+            <label class="form-label" name="subscribe">
+              <input
+                class="form-input"
+                type="text"
+                name="subscribe"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="form-button" type="submit">
+              Subscribe
+              <svg class="form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="backdrop is-open">
+      <div class="modal"></div>
+    </div>
   </body>
 </html>
