--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <label class="form-label" name="subscribe">
               <input
                 class="form-input"
-                type="text"
+                type="email"
                 name="subscribe"
                 placeholder="E-mail"
               />
@@ -486,43 +486,65 @@
 
     <div class="backdrop is-open">
       <div class="modal">
-        <button type="button">
-          <svg class="" wigth="" heigth="">
-            <use href=""></use>
+        <button class="modal-close-btn" type="button">
+          <svg class="modal-close-icon" wigth="8" heigth="8">
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p></p>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form>
-          <div class="name">
-            <label class="" for=""></label>
-            <div>
-              <input class="" name="" id="" type="text" /><svg class="" width="" height="">
-                <use href=""></use>
+          <div class="modal-info">
+            <label class="modal-lable" for="user-name">Name</label>
+            <div class="modal-input-icon">
+              <input class="input-info" name="user-name" id="user-name" type="text" placeholder>
+              <svg class="input-info-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-name"></use>
               </svg>
             </div>
-            <div class="phone">
-            <label class="" for=""></label>
-            <div>
-              <input class="" name="" id="" type="text" /><svg class="" width="" height="">
-                <use href=""></use>
+            <div class="modal-info">
+            <label class="modal-lable" for="user-phone">Phone</label>
+            <div class="modal-input-icon">
+              <input class="input-info" name="phone" id="user-phone" type="text" />
+              <svg class="input-info-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
-            <div class="email">
-            <label class="" for=""></label>
-            <div>
-              <input class="" name="" id="" type="text" /><svg class="" width="" height="">
-                <use href=""></use>
+            <div class="modal-info">
+            <label class="modal-lable" for="user-email">Email</label>
+            <div class="modal-input-icon">
+              <input class="input-info" name="email" id="user-email" type="email" />
+              <svg class="input-info-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
-            <div class="comment">
-            <label class="" for=""></label>
-            <div>
-              <input class="" name="" id="" type="text" /><svg class="" width="" height="">
-                <use href=""></use>
-              </svg>
+            <div class="modal-comment">
+            <label class="modal-lable" for="user-comment">Comment</label>
+            <textarea id="user-comment" class="modal-comment-area" name="user-comment" placeholder="Text input"></textarea>
             </div>
-            <div></div>
-          </div>
+            <div class="modal-radio-checkbox">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              class="radio-btn visually-hidden"
+              value="true"/>
+              <label
+              for="user-privacy"
+              class="privacy-policy-radio-btn">
+              <span class="modal-checkbox">
+              <svg
+              class="modal-checkbox-icon"
+              width="10"
+              height="8"
+              >
+              <use href="./images/icons.svg#icon-check"></use>
+            </svg>
+            </span> 
+              "I accept the terms and conditions of the" 
+              <a class="privacy-policy-link">Privacy Policy</a>
+            </label>
+            </div>
+            <button type="submit" class="modal-btn-send">Send</button>
         </form>
       </div>
     </div>
