--- a/index.html
+++ b/index.html
@@ -496,55 +496,74 @@
           <div class="modal-info">
             <label class="modal-lable" for="user-name">Name</label>
             <div class="modal-input-icon">
-              <input class="input-info" name="user-name" id="user-name" type="text" placeholder>
+              <input
+                class="input-info"
+                name="user-name"
+                id="user-name"
+                type="text"
+                placeholder
+              />
               <svg class="input-info-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-name"></use>
               </svg>
             </div>
-            <div class="modal-info">
+          </div>
+          <div class="modal-info">
             <label class="modal-lable" for="user-phone">Phone</label>
             <div class="modal-input-icon">
-              <input class="input-info" name="phone" id="user-phone" type="text" />
+              <input
+                class="input-info"
+                name="phone"
+                id="user-phone"
+                type="text"
+              />
               <svg class="input-info-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
-            <div class="modal-info">
+          </div>
+          <div class="modal-info">
             <label class="modal-lable" for="user-email">Email</label>
             <div class="modal-input-icon">
-              <input class="input-info" name="email" id="user-email" type="email" />
+              <input
+                class="input-info"
+                name="email"
+                id="user-email"
+                type="email"
+              />
               <svg class="input-info-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
-            <div class="modal-comment">
+          </div>
+          <div class="modal-comment">
             <label class="modal-lable" for="user-comment">Comment</label>
-            <textarea id="user-comment" class="modal-comment-area" name="user-comment" placeholder="Text input"></textarea>
-            </div>
-            <div class="modal-radio-checkbox">
+            <textarea
+              id="user-comment"
+              class="modal-comment-area"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-radio-checkbox">
             <input
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
               class="radio-btn visually-hidden"
-              value="true"/>
-              <label
-              for="user-privacy"
-              class="privacy-policy-radio-btn">
+              value="true"
+            />
+            <label for="user-privacy" class="privacy-policy-radio-btn">
               <span class="modal-checkbox">
-              <svg
-              class="modal-checkbox-icon"
-              width="10"
-              height="8"
-              >
-              <use href="./images/icons.svg#icon-check"></use>
-            </svg>
-            </span> 
-              "I accept the terms and conditions of the" 
+                <svg class="modal-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              "I accept the terms and conditions of the"
               <a class="privacy-policy-link">Privacy Policy</a>
             </label>
-            </div>
-            <button type="submit" class="modal-btn-send">Send</button>
+          </div>
+          <button type="submit" class="modal-btn-send">Send</button>
         </form>
       </div>
     </div>
