--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <div>
           <p class="footer-text-icon">Subscribe</p>
           <form class="form">
-            <label class="form-label" name="subscribe">
+            <label class="form-label" for="subscribe">
               <input
                 class="form-input"
                 type="email"
@@ -487,7 +487,7 @@
     <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
-          <svg class="modal-close-icon" wigth="8" heigth="8">
+          <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
