--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="footer-subscribe">
           <p class="footer-text-icon">Subscribe</p>
           <form class="form">
             <label class="form-label" for="subscribe">
