--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
                 class="form-input"
                 type="email"
                 name="subscribe"
+                id="subscribe"
                 placeholder="E-mail"
               />
             </label>
